fix background on tablet / remove autofill style (color, background) / add access to the phone number

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -9,6 +9,9 @@
     padding: 14px 16px;
     margin-bottom: 16px;
 
+    -webkit-text-fill-color: $color-form-text;
+    -webkit-box-shadow: 0 0 0 1000px $color-form-bg inset;
+
     color: $color-form-text;
     font-size: 14px;
     font-weight: 400;
