--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,10 @@
   background-size: cover;
   background-position-x: 86%;
 
+  @include on-tablet {
+    background-position: center;
+  }
+
   &__content {
     height: 100vh;
     display: flex;
