--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,6 +3,7 @@
   width: 24px;
   height: 24px;
   background-size: cover;
+  text-decoration: none;
 
   @include on-tablet {
     width: 32px;
@@ -11,16 +12,15 @@
 
   &--phone {
     background-image: url(../images/icons/icon-phone.png);
-    position: relative;
 
     &::before {
-      position: absolute;
+      position: relative;
       content: '+1 234 555-55-55';
+      display: block;
       width: max-content;
-      right: 52px;
+      left: -160px;
       top: 50%;
       transform: translateY(-50%);
-      display: none;
 
       color: $color-white;
       font-size: 12px;
@@ -31,10 +31,6 @@
 
     &:hover {
       @include cursor-default;
-    }
-
-    &:hover::before {
-      display: block;
     }
   }
 
