--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -16,4 +16,16 @@
     display: flex;
     gap: 24px;
   }
+
+  &__phone {
+    display: flex;
+    width: 32px;
+    height: 32px;
+    overflow: hidden;
+
+    &:hover {
+      justify-content: end;
+      width: 200px;
+    }
+  }
 }
